--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -42,7 +42,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Fira Sans";
   /* 4 */
 }
 
@@ -703,6 +703,10 @@ video {
   height: 14rem;
 }
 
+.max-h-44 {
+  max-height: 11rem;
+}
+
 .min-h-\[40px\] {
   min-height: 40px;
 }
@@ -743,6 +747,14 @@ video {
 
 .max-w-4xl {
   max-width: 56rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .flex-grow {
@@ -955,6 +967,11 @@ video {
   --tw-gradient-to: #0f766e;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-inside {
   padding: 1rem max(1rem, 50vw - 896px / 2);
 }
@@ -967,16 +984,6 @@ video {
   padding: 0.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -985,6 +992,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-2 {
@@ -1009,6 +1021,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.font-header {
+  font-family: "Merriweather";
 }
 
 .text-3xl {
