--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1158,6 +1158,29 @@ video {
   --tw-ring-color: rgb(94 234 212 / var(--tw-ring-opacity));
 }
 
+.active\:bg-gradient-to-r:active {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.disabled\:bg-teal-500:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-red-500:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-teal-700:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-none:disabled {
+  background-image: none;
+}
+
 @media (min-width: 640px) {
   .sm\:static {
     position: static;
